syntax = "proto3";

package opendut.model.peer.executor;

import "opendut/model/peer/executor/container.proto";
import "opendut/model/util/uuid.proto";

message ExecutorDescriptors {
  repeated opendut.model.peer.executor.ExecutorDescriptor executors = 1;
}

message ExecutorDescriptor {
  ExecutorId id = 1;
  oneof kind {
    Executable executable = 2;
    Container container = 3;
  }
  optional ResultsUrl results_url = 4;
}

message ExecutorId {
  opendut.model.util.Uuid uuid = 1;
}

message Executable {}

message Container {
  Engine engine = 1;
  ContainerName name = 2;
  ContainerImage image = 3;
  repeated ContainerVolume volumes = 4;
  repeated ContainerDevice devices = 5;
  repeated ContainerEnvironmentVariable envs = 6;
  repeated ContainerPortSpec ports = 7;
  ContainerCommand command = 8;
  repeated ContainerCommandArgument args = 9;
}

message ResultsUrl {
  string value = 1;
}
